Fixes text alignment on login buttons

--- a/src/themes/default/scss/_login.scss
+++ b/src/themes/default/scss/_login.scss
@@ -88,6 +88,10 @@
       margin-bottom: 10px;
     }
 
+    input[type="submit"] {
+      padding: 7px 22px 8px 22px;
+    }
+
     .login-select {
       position: relative;
 
